p3_syntactic_analysis/y.output
State 19 conflicts: 4 shift/reduce
State 20 conflicts: 4 shift/reduce


Grammar

    0 $accept: starting_point $end

    1 starting_point: calculation_list
    2               | if_statement

    3 calculation_list: expression
    4                 | calculation_list ',' expression

    5 if_statement: IF '(' expression ')' THEN expression ';' ELSE expression ';'

    6 expression: NATURAL
    7           | '(' expression ')'
    8           | expression '+' expression
    9           | expression '-' expression
   10           | expression '*' expression
   11           | expression '/' expression
   12           | IDENTIFIER EQ expression
   13           | IDENTIFIER '=' expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 5 7
    ')' (41) 5 7
    '*' (42) 10
    '+' (43) 8
    ',' (44) 4
    '-' (45) 9
    '/' (47) 11
    ';' (59) 5
    '=' (61) 13
    error (256)
    NATURAL (258) 6
    IDENTIFIER (259) 12 13
    IF (260) 5
    THEN (261) 5
    ELSE (262) 5
    EQ (263) 12


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    starting_point (19)
        on left: 1 2
        on right: 0
    calculation_list (20)
        on left: 3 4
        on right: 1 4
    if_statement (21)
        on left: 5
        on right: 2
    expression (22)
        on left: 6 7 8 9 10 11 12 13
        on right: 3 4 5 7 8 9 10 11 12 13


State 0

    0 $accept: • starting_point $end

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    IF          shift, and go to state 3
    '('         shift, and go to state 4

    starting_point    go to state 5
    calculation_list  go to state 6
    if_statement      go to state 7
    expression        go to state 8


State 1

    6 expression: NATURAL •

    $default  reduce using rule 6 (expression)


State 2

   12 expression: IDENTIFIER • EQ expression
   13           | IDENTIFIER • '=' expression

    EQ   shift, and go to state 9
    '='  shift, and go to state 10


State 3

    5 if_statement: IF • '(' expression ')' THEN expression ';' ELSE expression ';'

    '('  shift, and go to state 11


State 4

    7 expression: '(' • expression ')'

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 12


State 5

    0 $accept: starting_point • $end

    $end  shift, and go to state 13


State 6

    1 starting_point: calculation_list •
    4 calculation_list: calculation_list • ',' expression

    ','  shift, and go to state 14

    $default  reduce using rule 1 (starting_point)


State 7

    2 starting_point: if_statement •

    $default  reduce using rule 2 (starting_point)


State 8

    3 calculation_list: expression •
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 3 (calculation_list)


State 9

   12 expression: IDENTIFIER EQ • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 19


State 10

   13 expression: IDENTIFIER '=' • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 20


State 11

    5 if_statement: IF '(' • expression ')' THEN expression ';' ELSE expression ';'

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 21


State 12

    7 expression: '(' expression • ')'
    8           | expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18
    ')'  shift, and go to state 22


State 13

    0 $accept: starting_point $end •

    $default  accept


State 14

    4 calculation_list: calculation_list ',' • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 23


State 15

    8 expression: expression '+' • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 24


State 16

    9 expression: expression '-' • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 25


State 17

   10 expression: expression '*' • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 26


State 18

   11 expression: expression '/' • expression

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 27


State 19

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   12           | IDENTIFIER EQ expression •

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    '+'       [reduce using rule 12 (expression)]
    '-'       [reduce using rule 12 (expression)]
    '*'       [reduce using rule 12 (expression)]
    '/'       [reduce using rule 12 (expression)]
    $default  reduce using rule 12 (expression)


State 20

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   13           | IDENTIFIER '=' expression •

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    '+'       [reduce using rule 13 (expression)]
    '-'       [reduce using rule 13 (expression)]
    '*'       [reduce using rule 13 (expression)]
    '/'       [reduce using rule 13 (expression)]
    $default  reduce using rule 13 (expression)


State 21

    5 if_statement: IF '(' expression • ')' THEN expression ';' ELSE expression ';'
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18
    ')'  shift, and go to state 28


State 22

    7 expression: '(' expression ')' •

    $default  reduce using rule 7 (expression)


State 23

    4 calculation_list: calculation_list ',' expression •
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 4 (calculation_list)


State 24

    8 expression: expression • '+' expression
    8           | expression '+' expression •
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 8 (expression)


State 25

    8 expression: expression • '+' expression
    9           | expression • '-' expression
    9           | expression '-' expression •
   10           | expression • '*' expression
   11           | expression • '/' expression

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 9 (expression)


State 26

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   10           | expression '*' expression •
   11           | expression • '/' expression

    $default  reduce using rule 10 (expression)


State 27

    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression
   11           | expression '/' expression •

    $default  reduce using rule 11 (expression)


State 28

    5 if_statement: IF '(' expression ')' • THEN expression ';' ELSE expression ';'

    THEN  shift, and go to state 29


State 29

    5 if_statement: IF '(' expression ')' THEN • expression ';' ELSE expression ';'

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 30


State 30

    5 if_statement: IF '(' expression ')' THEN expression • ';' ELSE expression ';'
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18
    ';'  shift, and go to state 31


State 31

    5 if_statement: IF '(' expression ')' THEN expression ';' • ELSE expression ';'

    ELSE  shift, and go to state 32


State 32

    5 if_statement: IF '(' expression ')' THEN expression ';' ELSE • expression ';'

    NATURAL     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    '('         shift, and go to state 4

    expression  go to state 33


State 33

    5 if_statement: IF '(' expression ')' THEN expression ';' ELSE expression • ';'
    8 expression: expression • '+' expression
    9           | expression • '-' expression
   10           | expression • '*' expression
   11           | expression • '/' expression

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    '*'  shift, and go to state 17
    '/'  shift, and go to state 18
    ';'  shift, and go to state 34


State 34

    5 if_statement: IF '(' expression ')' THEN expression ';' ELSE expression ';' •

    $default  reduce using rule 5 (if_statement)
